Fix CTA spacing

--- a/css/main.css
+++ b/css/main.css
@@ -285,7 +285,7 @@ p.lead {
 
 .work-cta {
 	margin: 120px 0 0;
-	padding: 150px 0 125px;
+	padding: 150px 0 150px;
 	text-align: center;
 	background-color: #222;
 	color: #FFF;
